--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "axios": "^0.19.1",
     "expo": "~36.0.0",
+    "kind-of": "^6.0.3",
+    "loadash": "^1.0.0",
     "logkitty": "^0.7.1",
+    "mem": "^6.1.0",
+    "minimist": "^1.2.5",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
