--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~36.0.0",
     "kind-of": "^6.0.3",
     "loadash": "^1.0.0",
+    "lodash": "^4.17.19",
     "logkitty": "^0.7.1",
     "mem": "^6.1.0",
     "minimist": "^1.2.5",
